--- a/main.css
+++ b/main.css
@@ -10,9 +10,12 @@ body {
 	background-size: cover;
 
     width: 100%;
-    height: 100%;
+    height: 90%;
 }
 
+body>.mask {
+    height: 90%;
+}
 
 .mask {
     position: absolute;
@@ -54,7 +57,7 @@ body>.mask {
     right: 75%;
 }
 
-#main_canvas {
+.main_canvas {
     position: absolute;
     left: 5%;
     right: 5%;
@@ -64,5 +67,18 @@ body>.mask {
     width: 90%;
     height: 90%;
 
+}
+
+#background_drawer {
+    z-index: 9;
+}
+
+#obj_drawer {
     border: 0.1rem solid black;
+    z-index: 10;
+}
+
+.map {
+    width: 100%;
+    height: 100%;
 }
