整合，完成大部分内容

--- a/main.css
+++ b/main.css
@@ -79,6 +79,7 @@ body>.mask {
 }
 
 .map {
-    width: 100%;
-    height: 100%;
+    width: 100;
+    height: 100;
+    border: 1rem solid black;
 }
