测试完成，添加了吃东西加速的功能，接下来就是一些简单的东西的添加了，有时间再做

--- a/main.css
+++ b/main.css
@@ -79,7 +79,15 @@ body>.mask {
 }
 
 .map {
-    width: 100;
-    height: 100;
-    border: 1rem solid black;
+    width: 100%;
+    height: 100%;
+    border: 1px solid black;
+}
+
+#start {
+    position: absolute;
+    left: 30%;
+    right: 30%;
+    top: 20%;
+    border-radius: 1rem;
 }
